tests/interpreter/fail/202-arrayElement.hyg
let arr: array {int} = array(4, 40 + 2);
arrayElem(arr, 20) <- 420

